fix on iphone full

--- a/micrositev2/css/style.css
+++ b/micrositev2/css/style.css
@@ -1,5 +1,6 @@
 body {
-		
+	font-family: Arial;
+	color: #000;
 }
 
 #header {
@@ -53,9 +54,9 @@ a#logo {
 	left: 30px;
 }
 
-.space38 {
-	height: 38px;
-	line-height: 38px;
+.space5 {
+	height: 5px;
+	line-height: 5px;
 }
 
 .space10 {
@@ -63,9 +64,25 @@ a#logo {
 	line-height: 10px;
 }
 
+.space20 {
+	height: 20px;
+	line-height: 20px;
+}
+
+.space40,
+.space38 {
+	height: 40px;
+	line-height: 40px;
+}
+
 .space60 {
 	height: 60px;
 	line-height: 60px;
+}
+
+.space100 {
+	height: 100px;
+	line-height: 100px;
 }
 
 .fa-bg-header {
@@ -123,7 +140,7 @@ a#logo {
 #layer-mdata-welcome {
 	position: absolute;
 	z-index: 2;
-	left: 170px;
+	left: 175px;
 	top: -25px;
 }
 
@@ -144,7 +161,7 @@ a#logo {
 #mobi-layer-mdata-welcome {
 	position: absolute;
 	z-index: 2;
-	left: 85px;
+	left: 76px;
 	top: -25px;
 }
 
@@ -163,7 +180,7 @@ a#logo {
 }
 
 .font-green-mormal {
-	color: #a3d869;
+	color: #77b800;
 }
 
 .font-gray-mormal,
@@ -237,7 +254,6 @@ ul.font-gray-mormal li a {
 }
 
 .nextpage {
-	padding: 100px 0 20px 0;
 	text-align: center;
 }
 
@@ -556,6 +572,11 @@ p.lead {
 	color: #000;
 }
 
+.page-header {
+	border-bottom: none;
+	margin-bottom: 0;
+}
+
 @media(min-width:1200px){
 	.container {
 		width:1030px;
@@ -574,6 +595,15 @@ p.lead {
 }
 
 @media screen and (max-width:767px){
+	.mobi-device { 
+		padding-top: 35px;
+	}
+
+	.page-header {
+		margin-top: 0;
+		padding-bottom: 0;
+	}
+	
 	.mobile-global-nav{
 		position:relative;
 		z-index:999;
@@ -694,4 +724,14 @@ p.lead {
 	background: url(../images/overlay_voice2.png) left bottom no-repeat transparent;
 	height: 100%;
 	width: 100%;
+}
+
+.social-header a:hover span .fa-square{
+	color: #616265;
+	text-decoration: none;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-0-border-radius: 4px;
+	-ms-border-radius: 4px;
 }
